# network

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Findcatch.cmake  Findcore.cmake  Findrunloop.cmake
source/corvusoft/network/: adaptor.hpp  dns.cpp  dns.hpp  tcpip.cpp  tcpip.hpp  tcpip_adaptor.cpp  tcpip_adaptor.hpp  uri_builder.cpp  uri_builder.hpp
source/corvusoft/network/detail/: tcpip_adaptor_impl.hpp  tcpip_impl.hpp  uri_builder_impl.hpp
source/corvusoft/stub/: adaptor.hpp
test/feature/: CMakeLists.txt
test/feature/source/: client.cpp
test/feature/source/tcpip/: client.cpp
test/integration/: CMakeLists.txt
test/integration/source/: bi_directional_communication.cpp  listening_on_active_service_adaptor.cpp  open_client_on_active_service_adaptor.cpp  service_handler_callback_order.cpp  setup.cpp  tcpip_adaptor.cpp  uni_directional_communication.cpp
test/integration/source/uri_builder/: accessors.cpp  build.cpp  constructor.cpp  is_finalised.cpp  is_malformed.cpp
test/unit/: CMakeLists.txt
test/unit/source/: close.cpp  consume.cpp  create.cpp  destructor.cpp  flush.cpp  listen.cpp  open.cpp  peek.cpp  produce.cpp  purge.cpp  set_close_handler.cpp  set_error_handler.cpp  set_message_handler.cpp  set_open_handler.cpp  setup.cpp  tcpip_adaptor.cpp  teardown.cpp
test/unit/source/dns/: lookup.cpp
test/unit/source/tcpip/: close.cpp  constructor.cpp  consume.cpp  destructor.cpp  get_local_endpoint.cpp  get_remote_endpoint.cpp  listen.cpp  open.cpp  produce.cpp  setup.cpp  teardown.cpp
test/unit/source/uri_builder/: build.cpp  constructor.cpp  destructor.cpp  getters.cpp  is_finalised.cpp  is_malformed.cpp  setters.cpp
tool/cppcheck/: options
tool/cppclean/: options
